Added 13 levels for hiragana

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
             <div class="title-kanji">忍者</div>
             <div class="title">Shinobi</div>
             <div class="slogan">A tool to learn Japanese writing system</div>
-            <a href="kana.html"><button type="button" class="btn btn-link">Hiragana & katakana symbols</button></a>
+            <div style="text-align: center">
+                <a href="kana.html"><button type="button" class="btn btn-link">Hiragana symbols</button></a>
+            </div>
+            <div style="text-align: center">
+                <a href="quiz.php"><button type="button" class="btn btn-primary m-3">Play</button></a>
+            </div>
             <div class="alert alert-warning mt-3" role="alert">
                 Under developing...
             </div>
