--- a/kana.html
+++ b/kana.html
@@ -16,7 +16,6 @@
 		}
 
 		div {
-			font-weight: bold;
 			text-align: center;
 		}
 
@@ -37,7 +36,7 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12 col-md-6">
+        <div class="col-12">
             <h1>Hiragana</h1>
             <div class="row">
                 <div class="col-12">
@@ -58,7 +57,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-md-6">
+        <!--<div class="col-12 col-md-6">
             <h1>Katakana</h1>
             <div class="row">
                 <div class="col-12">
@@ -78,7 +77,7 @@
                     </table>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
